# code-review-agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  evolution-plan.md  newcomer-guide.md  project-status.md
examples/: sample.diff
src/review_agent/: __init__.py  cli.py  main.py
src/review_agent/agent/: checkpoint.py  graph.py  nodes.py  state.py  transitions.py
src/review_agent/api/: deps.py  routes_approvals.py  routes_health.py  routes_reviews.py  schemas.py
src/review_agent/application/: approval_service.py  report_service.py  review_service.py
src/review_agent/common/: clock.py  errors.py  ids.py
src/review_agent/config/: logging.py  settings.py
src/review_agent/domain/: dto.py  enums.py  models.py
src/review_agent/llm/: __init__.py  bailian_client.py
src/review_agent/reporting/: json_report.py  markdown_report.py
src/review_agent/repository/: postgres_review_task_repo.py  review_task_repo.py
src/review_agent/skills/: base.py  diff_summary.py  python_static.py  registry.py  repo_policy_rag.py  risk_pattern.py  router.py  test_impact.py
src/review_agent/tools/: base.py  git_diff_tool.py  mypy_tool.py  pytest_tool.py  ruff_tool.py  runner.py
tests/integration/: test_reviews_api.py
tests/unit/: test_agent_state_transitions.py  test_api_deps.py  test_diff_summary_skill.py  test_file_classification.py  test_git_diff_tool.py  test_postgres_review_task_repo.py  test_python_static_skill.py  test_report_builders.py  test_settings.py  test_skill_router.py
